# ValueScope

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
docs/: agent-handoff.md  backlog.md  design-brief.md  product-roadmap.md  progress.md  report-snapshot-schema.md  snapshot-schema.md  working-log.md
docs/agents/: claude-code.md  codex.md  github-copilot.md
docs/decisions/: ADR-001-local-json-no-db.md  ADR-002-python-snapshot-exporter-typescript-ui.md  ADR-003-local-fastapi-generation-bridge.md
docs/reference/: stock-scripts-capability-map.md
docs/sprints/: sprint-001.md  sprint-002.md
public/samples/: company_report_snapshot.json
python/valuescope/: __init__.py  api.py  cli.py  report_snapshot.py
python/valuescope/legacy_stock_scripts/: INDICATOR_GUIDE.md  __init__.py  run.py
python/valuescope/legacy_stock_scripts/core/: assessment.py  backtest.py  cache.py  config.py  data_a.py  data_hk_us.py  orchestrator.py  render.py  technicals.py  utils.py  valuation.py
scripts/: html_parity_check.mjs
src/: App.test.tsx  App.tsx  reportSnapshot.test.ts  reportSnapshot.ts  styles.css
tests/e2e/: report-workspace.spec.ts
tests/python/: test_api.py  test_cashflow_extras.py  test_historical_share_basis.py  test_report_snapshot.py
